style: enhance global styles with additional layout and typography classes

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -34,3 +34,34 @@ a {
 .align-center {
   align-items: center;
 }
+
+.row {
+  display: flex;
+  margin-bottom: 16px;
+}
+
+.col {
+  flex: 1 1 50%;
+  width: 50%;
+
+  &:not(:last-child) {
+    margin-right: 16px;
+    width: calc(50% - 8px);
+  }
+}
+
+.label {
+  font-size: 13px;
+  padding-bottom: 4px;
+}
+
+.subtitle {
+  padding-bottom: 4px;
+  font-size: 18px;
+  font-weight: 700;
+  color: $violet;
+}
+
+.w-100 {
+  width: 100%;
+}
